# corpus-

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml  run-server.sh  run-ui.sh
.github/workflows/: ci.yml  release.yml
corpus-server/: .dockerignore  Cargo.toml  Dockerfile  errors.txt
corpus-server/src/: auth.rs  jobs.rs  main.rs  models.rs  scratch_pdf.rs  state.rs
corpus-server/src/routes/: corpus.rs  images.rs  mod.rs
corpus-ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
corpus-ui/src/: App.tsx  api.ts  index.css
corpus-ui/src/components/: CorpusView.tsx  ImageGrid.tsx  JobProgress.tsx  LoginPage.tsx  Reader.tsx  Sidebar.tsx  UploadModal.tsx
doc-scanner/: Cargo.toml
doc-scanner/src/: batch.rs  config.rs  convert.rs  detect.rs  encode.rs  enhance.rs  error.rs  lib.rs  main.rs  pipeline.rs  resize.rs  transform.rs
scripts/: backup-corpus.sh  corpus  restore-corpus.sh
